--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarfraj Portfolia</title>
+    <title>Sarfraj Portfolio</title>
     <!-- font taken from boxicons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
 <body>
     <!--header design-->
     <header class="header">
-        <img src="images1/Logo.jpg" alt="Logo">
+        <img src="images1/Logo.png" alt="Logo">
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -30,8 +30,8 @@
             
             <h3>Hello,It's Me</h3>
             <h1>Sarfraj Alam</h1>
-            <h3>And I'am a <span class="multiple-text"></span></h3>
-            <p> "I'm a full-stack Java developer with expertise in Spring Boot, React, and Angular and web developer .
+            <h3>And I'm a <span class="multiple-text"></span></h3>
+            <p> "I'm a full-stack Java developer with expertise in Spring Boot, Hibernate, React, and SQL and web developer .
                  I build scalable and efficient web applications, working with databases like MySQL. Passionate about problem-solving and continuous learning, I enjoy creating impactful software solutions.".</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/sarfrajalam390/"> <i class='bx bxl-linkedin-square'></i></a>
@@ -93,7 +93,7 @@
 
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2023-Current</span><br>UI/UX Design at GNIT</li>
+                            <li><span>2023-Current</span><br>UI/UX Design at GNITC</li>
                             <li><span>2020-2022</span><br>Team Leader In Brumous at GNI</li>
                             <li><span>2018-2019</span><br>Web Developer at Technophilia Solution</li>
                         </ul>
@@ -124,7 +124,7 @@
                     integration, e-commerce solutions, responsive design, security enhancement, and ongoing maintenance
                     and support. Our expertise ensures tailored, user-friendly websites optimized for performance and
                     scalability. </p>
-                <!-- <a href="https://github.com/SarfrajAlam390" class="btn">Read More</a> -->
+                <!-- <a ahref="https://github.com/SarfrajAlam390" class="btn">Read More</a> -->
             </div>
             <div class="services-box">
                 <i class='bx bx-code-block'></i>
@@ -148,7 +148,7 @@
         </div>
     </section>
 
-    <!--protofolio section-->
+    <!--Projects section-->
 
     <section class="portfolio" id="portfolio">
         <h2 class="heading">Latest <span>Project</span></h2>
@@ -241,7 +241,10 @@
                 </div>
 
                 <div class="contact-right">
-                    <form method="post" action="https://script.google.com/macros/s/AKfycbwshoPO7c90-XMD5M4vYbRLgBpy3ngaClmd2COg9mavjJtSxCKcOKGNyPKPlfpM2A8O/exec" name="contact-form">
+
+                    <form action="https://api.web3forms.com/submit" method="POST" name="contact-form">
+
+                        <input type="hidden" name="access_key" value="6e2ee761-4440-45a2-ae8d-3f60b673d7c5">
 
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="text" name="Number" placeholder="Your Number" required>
@@ -268,7 +271,7 @@
                    
                 </div>
                 <div class="footer-col-2">
-                    <img src="images1/Logo.jpg">
+                    <img src="images1/Logo.png">
                     <p>Our Purpose Is To Sustainably Make The Pleasure And Benefits Of Website Accessible To The Many.
                     </p>
                 </div>
