--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="https://t.me/sarfrajalam39"><i class='bx bxl-telegram'></i> </a>
                 <a href="https://www.facebook.com/alam.sarfraj.390/"> <i class='bx bxl-facebook-circle'></i></a>
             </div>
-            <a href="Sarfraj_Alam1.pdf" download class="btn">Download CV</a>
+            <a href="Sarfraj_Alam_1.pdf" download class="btn">Download CV</a>
             <!---time set-->
             <div class="containers">
                 <div class="clock">
