--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <a href="https://t.me/sarfrajalam39"><i class='bx bxl-telegram'></i> </a>
                         <a href="https://www.facebook.com/alam.sarfraj.390/"> <i class='bx bxl-facebook-circle'></i></a>
                     </div>
-                    <a href="Sarfraj_Alam1.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Sarfraj_Alam_1.pdf" download class="btn btn2">Download CV</a>
                 </div>
 
                 <div class="contact-right">
